# ROS2_mini_project

./: .gitignore  README.md
src/package_a/: CMakeLists.txt  package.xml
src/package_a/include/package_a/: PackageANode.hpp  PackageASubsystem.hpp
src/package_a/src/: PackageANode.cpp  PackageASubsystem.cpp  main.cpp
src/package_b/: CMakeLists.txt  package.xml
src/package_b/include/package_b/: PackageBNode.hpp  PackageBSubsystem.hpp
src/package_b/src/: PackageBNode.cpp  PackageBSubsystem.cpp  main.cpp
