<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>package_a</name>
  <version>0.0.1</version>
  <description>Miniproject minimal setup</description>
  <maintainer email="vboxuser@todo.todo">vboxuser</maintainer>
  <license>Apache-2.0</license>
  <author>Sheng Lin</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
